scss/main.scss
* {
    margin: 0;
    padding: 0;
}

body {
    line-height: 1.6;
}

ul {
    list-style: none;
}

a {
    text-decoration: none;
    color: white;
}

.sidenav {
    display: flex;
    flex-direction: column;
    background: #333;
    height: 100%;
    width: 100px;
    position: fixed;
    z-index: 1;
    top: 0;
    left: 0;
    overflow: visible;
    padding-top: 20px;
    align-items: center;
    justify-content: space-evenly;
    text-align: center;

    .nav-item {
        margin: 1rem;
        position: relative;

        div {
            display: none;
            position: absolute;
            top: 0;
            left: 100%;
            margin-top: -30px;
            margin-left: -25px;
            transition: opacity 2s;
            opacity: 0;
        }

        a:hover + div {
            cursor: pointer;
            display: block;
            z-index: 2;
            width: 250px;
            padding: 8px;
            margin-right: 40px;
            padding: 0 2rem;
            opacity: 1;
            // border: 1px solid red;
            // background: #f4f4f4;
            border-radius: 5px;
            .tooltipinner {
                border: 1px blue solid;
                background: #000;
                color: white;
                font-family: Arial, Helvetica, sans-serif;
                padding: .75rem;
                border-radius: 10px;
            }
        }
    } 
}

